Fix project properties, with correct libaries

--- a/lib/BattleShip_Trafalgar/nbproject/project.properties
+++ b/lib/BattleShip_Trafalgar/nbproject/project.properties
@@ -3,8 +3,8 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=R2
-application.vendor=rolf
+application.title=BattleShip_Trafalgar
+application.vendor=Tobias Grundtvig
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -25,14 +25,13 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/R2.jar
+dist.jar=${dist.dir}/BattleShip_Trafalgar.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.BattleShip_Trafalgar.jar}:\
     ${reference.Tournament_Trafalgar.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -57,14 +56,12 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=r2.R2
+main.class=newbattleship.NewBattleShip
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.BattleShip_Trafalgar=../../../Desktop/datamatiker/battleship/BattleShip_Trafalgar
-project.Tournament_Trafalgar=../../../Desktop/datamatiker/battleship/Tournament_Trafalgar
-reference.BattleShip_Trafalgar.jar=${project.BattleShip_Trafalgar}/dist/BattleShip_Trafalgar.jar
+project.Tournament_Trafalgar=../Tournament_Trafalgar
 reference.Tournament_Trafalgar.jar=${project.Tournament_Trafalgar}/dist/Tournament_Trafalgar.jar
 run.classpath=\
     ${javac.classpath}:\
