--- a/src/nbproject/private/private.properties
+++ b/src/nbproject/private/private.properties
@@ -3,4 +3,6 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\rolf\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+project.BattleShip_Trafalgar=C:\\dev\\projects\\BattleshipR2\\lib\\BattleShip_Trafalgar
+project.Tournament_Trafalgar=C:\\dev\\projects\\BattleshipR2\\lib\\Tournament_Trafalgar
+user.properties.file=C:\\Users\\priva_000\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
