--- a/lib/Tournament_Trafalgar/nbproject/project.properties
+++ b/lib/Tournament_Trafalgar/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=R2
-application.vendor=rolf
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -25,22 +24,19 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/R2.jar
+dist.jar=${dist.dir}/Tournament_Trafalgar.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${reference.BattleShip_Trafalgar.jar}:\
-    ${reference.Tournament_Trafalgar.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.8
-javac.target=1.8
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -57,15 +53,11 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=r2.R2
+main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.BattleShip_Trafalgar=../../../Desktop/datamatiker/battleship/BattleShip_Trafalgar
-project.Tournament_Trafalgar=../../../Desktop/datamatiker/battleship/Tournament_Trafalgar
-reference.BattleShip_Trafalgar.jar=${project.BattleShip_Trafalgar}/dist/BattleShip_Trafalgar.jar
-reference.Tournament_Trafalgar.jar=${project.Tournament_Trafalgar}/dist/Tournament_Trafalgar.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
